# physical-ai-humanoid-textbook

./: docusaurus.config.ts  package-lock.json  package.json  restart-server-instructions.md
.specify/memory/: constitution.md
chatbot-backend/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  config.py  conversation_state.py  database.py  document_processor.py  embedder.py  llm.py  main.py  middleware.py  models.py  performance.py  pyproject.toml  requirements.txt  retriever.py  schemas.py  tools.py  utils.py  validation.py
docs/01-intro/: 01-welcome.md  02-hardware-and-stack.md
docs/01-introduction/: intro.mdx
docs/02-module-1-ros2/: 01-nodes-intro.md  02-python-agents.md  03-urdf-basics.md  04-services-and-actions.md  ros2-basics.mdx
docs/03-module-2-digital-twin/: simulation.mdx
docs/03-module-2-simulation/: 01-gazebo-physics.md  02-sensor-simulation.md  03-unity-for-visualization.md
docs/04-module-3-isaac/: 01-isaac-sim-intro.md  02-vslam-and-nav2.md  03-sim-to-real-transfer.md
docs/04-module-3-nvidia-isaac/: perception.mdx
docs/05-module-4-vla/: 01-whisper-voice.md  02-llm-planning.md  03-capstone-project.md  04-humanoid-kinematics.md  vla-intelligence.mdx
specs/: constitution.md  plan.md  specify.md  tasks.md
specs/001-textbook-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-homepage-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-chatbot/: plan.md  spec.md  tasks.md
specs/004-rag-chatbot-ui/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
(+49 files in other folders)
